Migrating to OpenJFX12 & openjfx-maven-plugin