@@ -6,7 +6,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
-        <plugins>
+        <plugins>     
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -14,20 +14,18 @@
                 <configuration>
                     <release>11</release>
                 </configuration>
-            </plugin>
+            </plugin>       
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.1</version>
                 <configuration>
-                    <mainClass>eu.jangos.extractorfx.ExtractorFx</mainClass>
+                    <mainClass>eu.jangos.extractorfx.ExtractorFx</mainClass>                    
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.runtime=controlsfx</option>
+                    </options>
+                    <commandlineArgs>-Xmx2048m</commandlineArgs>
                 </configuration>
             </plugin>
         </plugins>
@@ -81,12 +79,12 @@
         <dependency>
             <groupId>org.recast4j</groupId>
             <artifactId>recast</artifactId>
-            <version>1.0.7</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.recast4j</groupId>
             <artifactId>detour</artifactId>
-            <version>1.0.7</version>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>org.recast4j</groupId>
@@ -106,22 +104,22 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>8.40.14</version>
+            <version>9.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>12-ea+13</version>
+            <version>12-ea+14</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>12-ea+13</version>
+            <version>12-ea+14</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>12-ea+13</version>
+            <version>12-ea+14</version>
         </dependency>
     </dependencies>
 </project>
